# perfdemo

./: .gitignore  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
cpp_ext/: CMakeLists.txt  compute_ext.cpp
perfdemo/: __init__.py  __main__.py  async_utils.py  demos.py  rate_limiter.py  tasks.py
