[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perfdemo"
version = "0.1.0"
description = "高性能并发与并行计算演示项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba>=0.59.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# C++ 扩展依赖（可选）
cpp = ["pybind11>=2.10.0"]
# 开发依赖
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
perfdemo = "perfdemo.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["perfdemo*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
